applications/_templates/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}
  namespace: ${TEAM_NAME}
  labels:
    app: ${APP_NAME}
    team: ${TEAM_NAME}
spec:
  type: ClusterIP
  selector:
    app: ${APP_NAME}
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
